fixes text on mobile

--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -7,11 +7,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: $sourceSansPro;
-  p,
-  .figure-caption {
-    text-align: justify;
-    text-justify: inter-word;
-  }
 }
 
 main {
@@ -48,5 +43,14 @@ section:nth-of-type(2) {
     &:hover {
       color: $midnightblue;
     }
+  }
+}
+
+@media screen and (min-width: 992px) {
+  //do Smth
+  p,
+  .figure-caption {
+    text-align: justify;
+    text-justify: inter-word;
   }
 }
